[gd_scene load_steps=5 format=1]

[ext_resource path="res://scripts/bullet_explode.gd" type="Script" id=1]
[ext_resource path="res://images/bullet.png" type="Texture" id=2]
[ext_resource path="res://images/fire_particle.png" type="Texture" id=3]

[sub_resource type="CapsuleShape2D" id=1]

custom_solver_bias = 0.0
radius = 1.6
height = 13.0

[node name="bullet" type="RigidBody2D"]

input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( -4.37114e-08, -1, 1, -4.37114e-08, 0, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
mode = 0
mass = 0.00102041
friction = 1.0
bounce = 0.2
gravity_scale = 1.0
custom_integrator = false
continuous_cd = 1
contacts_reported = 1
contact_monitor = true
sleeping = false
can_sleep = true
velocity/linear = Vector2( 0, 0 )
velocity/angular = 0.0
damp_override/linear = -1.0
damp_override/angular = -1.0
script/script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="."]

transform/scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="Particles2D" type="Particles2D" parent="Sprite"]

transform/pos = Vector2( -16, 0 )
transform/scale = Vector2( 0.5, 0.25 )
config/amount = 10
config/lifetime = 1.0
config/emit_timeout = 1.0
config/emitting = false
config/process_mode = 0
config/texture = ExtResource( 3 )
params/direction = 270.0
params/spread = 10.0
params/linear_velocity = 20.0
params/spin_velocity = 0.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 0.0
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 0.0
params/initial_angle = 0.0
params/initial_size = 1.0
params/final_size = 1.0
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

transform/rot = 90.0
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="Timer" type="Timer" parent="."]

process_mode = 1
wait_time = 2.0
one_shot = true
autostart = true

[connection signal="body_enter_shape" from="." to="." method="_on_bullet_body_enter_shape"]

[connection signal="body_exit_shape" from="." to="." method="_on_bullet_body_exit_shape"]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]


